--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -16,19 +16,30 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.Let_me_have_one"
-        tools:targetApi="31" >
+        tools:targetApi="31">
         <activity
-            android:name=".Authentication.AuthActivity"
-            android:exported="false" />
-        <activity
-            android:name=".Beers.presentation.MainActivity"
+            android:name=".SplashActivity"
             android:exported="true" >
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
+
+        <activity
+            android:name=".Authentication.VerifyActivity"
+            android:exported="true" />
+        <activity
+            android:name=".Authentication.SendOtpActivity"
+            android:exported="true">
+
+        </activity>
+        <activity
+            android:name=".Beers.presentation.MainActivity"
+            android:exported="true"></activity>
     </application>
 
 </manifest>
