--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@
 buildscript {
 
     repositories {
+
         google()
         mavenCentral()
     }
@@ -10,8 +11,11 @@ buildscript {
     dependencies {
         def nav_version = "2.5.3"
         classpath("androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version")
+        classpath 'com.google.gms:google-services:4.3.15'
     }
 }
+
+
 
 plugins {
     id 'com.android.application' version '7.4.0' apply false
